# gmtk2019

./: Cargo.toml  README.md
assets/texture/: tilesheet.ron
resources/maps/: default.tmx
resources/prefabs/: ball.ron  breakable.ron  wall.ron
src/: environment.rs  main.rs  player.rs  prefabs.rs  resources.rs  state.rs
src/states/: game.rs  load.rs  mod.rs
src/systems/: ball_control_system.rs  ball_movement_system.rs  mod.rs  spatial_grid_system.rs
