[package]
name = "one-ball-one-button-no-time"
version = "0.1.0"
authors = ["People <people@people.com>"]
edition = "2018"

[dependencies]
amethyst = "0.12.0"
serde = { version = "1.0", features = ["derive"]}
specs-derive = "0.4.0"
log = { version = "0.4.6", features = ["serde"] }
tiled = { path = "../rs-tiled", features=["amethyst"]}

[features]
default = ["vulkan"]

empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]
